<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radioalertgroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/submit_logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:contentDescription="@string/logo_accessibility"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/submit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/submit_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
    </RadioGroup>

    <RadioButton
        android:id="@+id/submit_road"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/submit_road_closure" />

    <RadioButton
        android:id="@+id/submit_flood_banks"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_flooded_banks" />

    <RadioButton
        android:id="@+id/submit_stranded_people"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_stranded_people" />

    <RadioButton
        android:id="@+id/submit_stranded_animals"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_stranded_animals" />

    <RadioButton
        android:id="@+id/submit_water_receed"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_water_receeded" />

    <RadioButton
        android:id="@+id/submit_power"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_power_outage" />

    <RadioButton
        android:id="@+id/submit_crash"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_car_crash" />

    <RadioButton
        android:id="@+id/submit_other"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/submit_other" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/submit_button" />

</RelativeLayout>