<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/main_logo_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="62dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_accessibility"
        android:maxWidth="150dp"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/flood_hack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/auth_hack"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Button
        android:id="@+id/floodmapbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/flood_hack"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="floodmap"
        android:text="@string/main_view_map" />

    <Button
        android:id="@+id/viewalertsbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/floodmapbutton"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="viewalerts"
        android:text="@string/main_view_alerts" />

    <Button
        android:id="@+id/submitalertbutton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/viewalertsbutton"
        android:layout_alignParentLeft="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="submitalert"
        android:text="@string/main_submit_alert" />

    <Button
        android:id="@+id/auth_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick="showAuth"
        android:text="@string/auth_question" />

</RelativeLayout>